Fix HTML structure and improve styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,179 @@
   <style>
     body {
       margin: 0;
+      font-family: <!DOCTYPE html>
+<html lang="uk">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Online Market</title>
+
+  <style>
+    body {
+      margin: 0;
       font-family: Arial, sans-serif;
       background: #0e1217;
       color: white;
     }
+
+    header img {
+      width: 100%;
+      display: block;
+      border-bottom: 3px solid #222;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 42px;
+      margin: 20px 0;
+      text-shadow: 0 0 10px rgba(255,255,255,0.3);
+    }
+
+    h2 {
+      font-size: 28px;
+      margin-left: 20px;
+      margin-top: 40px;
+    }
+
+    .tg-btn {
+      display: inline-block;
+      margin-left: 20px;
+      margin-top: 15px;
+      padding: 14px 28px;
+      font-size: 20px;
+      color: white;
+      text-decoration: none;
+      background: #229ED9;
+      border-radius: 12px;
+      box-shadow: 0 6px 0 #186f96, 0 0 18px rgba(34,158,217,0.6);
+      transition: all 0.15s ease-in-out;
+    }
+
+    .tg-btn:hover {
+      box-shadow: 0 0 25px rgba(34,158,217,1);
+      transform: translateY(-3px);
+    }
+
+    .tg-btn:active {
+      transform: translateY(3px);
+      box-shadow: 0 3px 0 #186f96;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+
+    .card {
+      background: #161b22;
+      border-radius: 15px;
+      overflow: hidden;
+      transition: transform .25s, box-shadow .25s;
+      box-shadow: 0 0 15px rgba(255,255,255,0.05);
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px rgba(255,255,255,0.15);
+    }
+
+    .card img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+    }
+
+    .meta {
+      padding: 15px;
+    }
+
+    .title {
+      font-size: 20px;
+      margin-bottom: 5px;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      color: #c9d1d9;
+      line-height: 1.6;
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      color: #999;
+    }
+  </style>
+</head>
+
+<body>
+
+  <header>
+    <img src="https://i.postimg.cc/ZnMbZ0w6/Bez-nazvania.jpg" alt="Banner">
+  </header>
+
+  <h1>Online Market</h1>
+
+  <h2>Контакти</h2>
+
+  <a class="tg-btn" href="https://t.me/gromov0025" target="_blank">Telegram</a> 
+  <a class="tg-btn" href="https://discord.gg/Wg3PzaEr" target="_blank">Discord</a>
+
+
+  <h2>Товари</h2>
+
+  <div class="grid">
+
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?w=800&q=80" alt="Форум">
+      <div class="meta">
+        <div class="title">Форум</div>
+        <div class="subtitle">
+          • Допомога з налаштуванням — <b>120₴</b><br>
+          • Загальне налаштування — <b>50₴</b><br>
+          • Навчання налаштуванню з 0 — <b>200₴</b>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=800&q=80" alt="Сайт">
+      <div class="meta">
+        <div class="title">Сайт</div>
+        <div class="subtitle">
+          • Допомога з налаштуванням сайту — <b>40₴</b><br>
+          • Створення сайту з нуля (HTML) — <b>130₴</b><br>
+          • Створення сайту на конструкторі — <b>60₴</b><br>
+          • Навчання керуванню хостингом — <b>30₴</b><br>
+          • Навчання заливці коду на хостинг — <b>25₴</b>
+        </div>
+      </div>
+    </div>
+
+    <!-- ДИСКОРД КАНАЛИ -->
+    <div class="card">
+      <img src="https://i.postimg.cc/BQtx5qnk/f154004e-4fa1-44a6-b906-c47754e44770.png" alt="Discord">
+      <div class="meta">
+        <div class="title">Discord канали</div>
+        <div class="subtitle">
+          • Створення Discord каналу на ваш вибір — <b>40₴</b><br>
+          • Налаштування Discord каналу на ваш вибір — <b>30₴</b>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <footer>
+    © 2025 Online Market
+  </footer>
+
+</body>
+</html>
+
+
 
     header img {
       width: 100%;
